@@ -1,10 +1,7 @@
 require 'bluth'
 require 'bluth/test_helpers'
 
-
-## Bluth.queues
-Bluth.queues.keys.collect(&:to_s).sort
-#=> ["critical", "failed", "high", "low", "orphaned", "running", "scheduled", "successful"]
+Familia.debug = true
 
 ## Can enqueue a job
 @job = ExampleJob.enqueue :arg1 => :val1
@@ -13,20 +10,24 @@ Bluth.queues.keys.collect(&:to_s).sort
 
 ## ExampleGob knows it's on critical queue
 @job.current_queue
-#=> Bluth::Critical
+#=> :critical
 
 ## Bluth::Critical has job id
-Bluth::Critical.range.collect(&:id).member? @job.jobid
+Bluth::Queue.critical.range.member? @job.jobid
 #=> true
 
 ## Can fetch a job from queue
-@popped_job = Bluth::Critical.pop
-@popped_job.jobid 
+@gobid = Bluth::Queue.critical.pop
 #=> @job.jobid
 
-## Popped job is set to running
+## Create Gob
+@popped_job = Bluth::Gob.from_redis @gobid
+@popped_job.jobid
+#=> @job.jobid
+
+## Popped job is still critical
 @popped_job.current_queue
-#=> Bluth::Running
+#=> :critical
 
 ## Popped job has args
 @popped_job.data['arg1']
